--- a/gallery.html
+++ b/gallery.html
@@ -25,15 +25,15 @@
     <div class="content-wrap">
 <header class="header">
     <div class="logo">
-    <img src="images/NASA_logo.svg.png" alt="" class="logo-img">
+        <a href="./index.html"><img src="images/NASA_logo.svg.png" alt="" class="logo-img"></a>
     </div>    
 <nav class="main-nav">
    
     <ul  class="main-nav-list">
         <li><a class="main-nav-link" href="./index.html">Home</a></li>
-        <li><a class="main-nav-link" href="#">Mars</a></li>
-        <li><a class="main-nav-link" href="#">Earth</a></li>
-        <li><a class="main-nav-link" href="#">Jupiter</a></li>
+        <li><a class="main-nav-link" href="./news.html">News</a></li>
+        <li><a class="main-nav-link" href="./aliens.html">Alien Life</a></li>
+        <li><a class="main-nav-link" href="#">Black Holes</a></li>
         <li><a class="main-nav-link" href="./gallery.html">Gallery</a></li>
     </ul>
 </nav>
@@ -49,6 +49,7 @@
     <div class="hero">
     
         <h1 class="hero-title hero-title--galllery-page">Houston, <br>we have a problem.....</h1>
+        <!-- <img src="./images/hero_edit.jpg" alt=""> -->
       </div>
 
     <div class="back-to-top--container">
